--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html lang="en">
 
 <head>
-<meta name=“description” content=“This page…”>
-<meta name=“author” content=“A. Author">
-<title>Page Title</title>
-<link rel=“stylesheet” type=“text/css” href=“style.css”>
+    <meta charset="UTF-8">
+    <title>My Todo List</title>
+    <meta name="author" content="PUT YOUR NAME HERE">
+    <meta name="description" content="Use ToDo list app to explore and interact with the DOM">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-Content of the document......
-<script src=“script.js”></script>
+    <h1>My ToDo List</h1>
+
+    <from> 
+        <label> Task Name: 
+            <input type="text"
+        </label>
+    </from>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
