--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Todo List</title>
-    <meta name="author" content="PUT YOUR NAME HERE">
+    <meta name="author" content="Emerald Golightly">
     <meta name="description" content="Use ToDo list app to explore and interact with the DOM">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
