--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>My Todo List</title>
-    <meta name="author" content="Emerald Golightly">
-    <meta name="description" content="Use ToDo list app to explore and interact with the DOM">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>To do list </title>
+    <meta name="" content="">
+    <meta name="description" content="Explore flatland and interact with its inhabitants">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h1>My ToDo List</h1>
-
-    <from> 
-        <label> Task Name: 
-            <input type="text"
-        </label>
-    </from>
-    <script src="js/script.js"></script>
-</body>
-
-</html>
+    Content of the document......
+    <script src=“script.js”></script>
+    </body>
+    
+    </html>
+    
