--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+<ul>
+<li></li>
+</ul>
+    <h1> My ToDo List</h1>
     Content of the document......
     <script src=“script.js”></script>
     </body>
