--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>To do list </title>
-    <meta name="" content="">
-    <meta name="description" content="Explore flatland and interact with its inhabitants">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>My Todo List</title>
+    <meta name="author" content="PUT YOUR NAME HERE">
+    <meta name="description" content="Use ToDo list app to explore and interact with the DOM">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-<ul>
-<li></li>
-</ul>
-    <h1> My ToDo List</h1>
-    Content of the document......
-    <script src=“script.js”></script>
-    </body>
-    
-    </html>
-    
+    <h1>My ToDo List</h1>
+
+    <script src="js/script.js"></script>
+</body>
+
+</html>
