--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <meta name="description" content="Use ToDo list app to explore and interact with the DOM">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+<ul> 
+<li> 
+    <label>
+        <input type = "checkbox">
+        Buy Milk 
+    </label>
+</li>
+<li> 
+
+    
+</li>
+
+</ul>
 
 <body>
     <h1>My ToDo List</h1>
