--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="Use ToDo list app to explore and interact with the DOM">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+<form>
+
+
+</form>
 <ul> 
 <li> 
     <label>
@@ -17,10 +21,11 @@
 </li>
 <li> 
 
-    
+
 </li>
 
 </ul>
+
 
 <body>
     <h1>My ToDo List</h1>
