--- a/index.html
+++ b/index.html
@@ -8,27 +8,42 @@
     <meta name="description" content="Use ToDo list app to explore and interact with the DOM">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<form>
-
-
-</form>
-<ul> 
-<li> 
-    <label>
-        <input type = "checkbox">
-        Buy Milk 
-    </label>
-</li>
-<li> 
-
-
-</li>
-
-</ul>
-
 
 <body>
     <h1>My ToDo List</h1>
+
+<form>
+    <label> Task Name: 
+        <input id="task-input" type="text" placeholder="Do Assignment">
+    </label>
+    <button id="add-button" type="button">
+       Add Task 
+    </button>
+
+</form>
+<ul id="todo-list"> 
+<li class = "task"> 
+    <label>
+        <input type = "checkbox">
+        Build Website
+    </label>
+</li>
+<li class ="task"> 
+    <label>
+        <input type="=checkbox">
+        Buy Milk
+    </label>
+</li>
+<li>
+    <label> 
+        <input type="checkbox">
+        Do something.. 
+    </label>
+</li>
+</ul>
+
+
+
 
     <script src="js/script.js"></script>
 </body>
