added html template

--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
         </button>
     </form>
 
-    <ul id="todo-list">
-        
+    <ul> id="todo-list">
     </ul>
+        
+    <script id ="todo-item-template" type="text/template">
+        <li>
+            <label>
+                <input type="checkbox">
+            <label>
+            <!----TASK_NAME---->
+        </li>   
+    </script>
 
     <script src="js/script.js"></script>
 </body>
-
-
-
 </html>
