--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </button>
     </form>
 
-    <ul> id="todo-list">
+    <ul id="todo-list">
     </ul>
         
     <script id ="todo-item-template" type="text/template">
-        <li>
+        <li class="task">
             <label>
                 <input type="checkbox">
             <label>
