adding checkbox class to html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script id ="todo-item-template" type="text/template">
         <li class="task">
             <label>
-                <input type="checkbox">
+                <input class= "checkbox" type="checkbox">
             <label>
             <!----TASK_NAME---->
         </li>   
