--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li class="task">
             <label>
                 <input class= "checkbox" type="checkbox">
-            <label>
+            </label>
             <!----TASK_NAME---->
         </li>   
     </script>
